Added unit tests using Moq

--- a/BringingItAllTogether.Service.Tests/App.config
+++ b/BringingItAllTogether.Service.Tests/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+<connectionStrings>
+    <add name="DbConnectionString" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=EFCodeFirstDI;integrated security=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
