--- a/BringingItAllTogether.Service.Tests/BringingItAllTogether.Service.Tests.csproj
+++ b/BringingItAllTogether.Service.Tests/BringingItAllTogether.Service.Tests.csproj
@@ -45,6 +45,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
@@ -62,13 +66,22 @@
   </Choose>
   <ItemGroup>
     <Compile Include="TestRepository.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="PackageTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PackageRepositoryWithMoqTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BringingItAllTogether.Core\BringingItAllTogether.Core.csproj">
       <Project>{6deca874-0b88-44a5-b62a-35e6c6cdd1cf}</Project>
       <Name>BringingItAllTogether.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BringingItAllTogether.Data\BringingItAllTogether.Data.csproj">
+      <Project>{31f424ca-d425-4e57-9bfe-4c24b3ef560a}</Project>
+      <Name>BringingItAllTogether.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BringingItAllTogether.Service\BringingItAllTogether.Service.csproj">
+      <Project>{34a3a171-1481-4888-9fdf-8d5723ee1b37}</Project>
+      <Name>BringingItAllTogether.Service</Name>
     </ProjectReference>
     <ProjectReference Include="..\BringingItAllTogther.Interfaces\BringingItAllTogether.Interfaces.csproj">
       <Project>{5083061e-3293-4a0b-8b18-78dd3b1fa97b}</Project>
