--- a/BringingItAllTogether/BringingItAllTogether.csproj
+++ b/BringingItAllTogether/BringingItAllTogether.csproj
@@ -225,6 +225,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="KnockoutModels\PackageModel.js" />
     <Content Include="KnockoutModels\PackageViewModel.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -288,7 +289,6 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
-    <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BringingItAllTogether.Core\BringingItAllTogether.Core.csproj">
