Added unitofwork pattern and started to implement authentication

--- a/BringingItAllTogether.Service/BringingItAllTogether.Service.csproj
+++ b/BringingItAllTogether.Service/BringingItAllTogether.Service.csproj
@@ -54,9 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IPackageService.cs" />
     <Compile Include="PackageService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BringingItAllTogether.Core\BringingItAllTogether.Core.csproj">
