--- a/BringingItAllTogther.Interfaces/BringingItAllTogether.Interfaces.csproj
+++ b/BringingItAllTogther.Interfaces/BringingItAllTogether.Interfaces.csproj
@@ -53,7 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDbContext.cs" />
+    <Compile Include="IPackageService.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="IUserServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
