--- a/BringingItAllTogether.Core/BringingItAllTogether.Core.csproj
+++ b/BringingItAllTogether.Core/BringingItAllTogether.Core.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Data\Package.cs" />
+    <Compile Include="Data\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
