--- a/BringingItAllTogether.Data/BringingItAllTogether.Data.csproj
+++ b/BringingItAllTogether.Data/BringingItAllTogether.Data.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510231203234_AddedPackages.resx">
