--- a/BringingItAllTogther.Interfaces/BringingItAllTogether.Interfaces.csproj
+++ b/BringingItAllTogther.Interfaces/BringingItAllTogether.Interfaces.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IDbContext.cs" />
     <Compile Include="IPackageService.cs" />
     <Compile Include="IRepository.cs" />
+    <Compile Include="ITokenServices.cs" />
     <Compile Include="IUserServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
