--- a/BringingItAllTogether.Core/BringingItAllTogether.Core.csproj
+++ b/BringingItAllTogether.Core/BringingItAllTogether.Core.csproj
@@ -52,8 +52,10 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Data\Package.cs" />
+    <Compile Include="Data\Token.cs" />
     <Compile Include="Data\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
