--- a/BringingItAllTogether/Web.config
+++ b/BringingItAllTogether/Web.config
@@ -12,19 +12,22 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BringingItAllTogether-20151020084454.mdf;Initial Catalog=aspnet-BringingItAllTogether-20151020084454;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DbConnectionString" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=EFCodeFirstDI;integrated security=True;" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=EFCodeFirstDI;integrated security=True;" providerName="System.Data.SqlClient" />-->
-    
+     <add name="WebApiDbEntities" connectionString="metadata=res://*/WebApiDataModel.csdl|res://*/WebApiDataModel.ssdl|res://*/WebApiDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=WebApiDb;persist security info=True;integrated security=True; App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="AuthTokenExpiry" value="900" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  </system.web>
+  <httpHandlers>
+      <add verb="*" path="routes.axd" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
+    </httpHandlers></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -34,7 +37,7 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    <add name="AttributeRouting" path="routes.axd" verb="*" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" /></handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
