Added more logging and also for unitofwork.

--- a/BringingItAllTogether/Web.config
+++ b/BringingItAllTogether/Web.config
@@ -1,18 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"  ?>
+
+
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
-<configuration>
+<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-BringingItAllTogether-20151020084454.mdf;Initial Catalog=aspnet-BringingItAllTogether-20151020084454;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DbConnectionString" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=EFCodeFirstDI;integrated security=True;" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=EFCodeFirstDI;integrated security=True;" providerName="System.Data.SqlClient" />-->
-     <add name="WebApiDbEntities" connectionString="metadata=res://*/WebApiDataModel.csdl|res://*/WebApiDataModel.ssdl|res://*/WebApiDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=WebApiDb;persist security info=True;integrated security=True; App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WebApiDbEntities" connectionString="metadata=res://*/WebApiDataModel.csdl|res://*/WebApiDataModel.ssdl|res://*/WebApiDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=CZC24192YQ\SQLEXPRESS;Initial Catalog=WebApiDb;persist security info=True;integrated security=True; App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -25,9 +28,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
-  <httpHandlers>
+    <httpHandlers>
       <add verb="*" path="routes.axd" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
-    </httpHandlers></system.web>
+    </httpHandlers>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -37,7 +41,8 @@
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    <add name="AttributeRouting" path="routes.axd" verb="*" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" /></handlers>
+      <add name="AttributeRouting" path="routes.axd" verb="*" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -101,4 +106,15 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <nlog>
+    <targets>
+      <default-wrapper xsi:type="BufferingWrapper" bufferSize="100"/>
+      <target name="logfile" xsi:type="File" fileName="${basedir}/APILog/${date:format=yyy-MM-dd}-api.log}"/>
+      <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source="Api Services" /> 
+    </targets>
+    <rules>
+      <logger name="*" minlevel="Trace" writeTo="logfile" />
+      <logger name="*" minlevel="Trace" writeTo="eventlog" />
+    </rules>
+  </nlog>
 </configuration>
