--- a/BringingItAllTogether/packages.config
+++ b/BringingItAllTogether/packages.config
@@ -42,6 +42,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.0.0" targetFramework="net45" />
   <package id="Ninject.Web.WebApi" version="3.2.4.0" targetFramework="net45" />
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net45" />
+  <package id="NLog" version="4.2.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="WebActivator" version="1.0.0.0" targetFramework="net45" />
