Attempted to fix test project.

--- a/BringingItAllTogether/Web.config
+++ b/BringingItAllTogether/Web.config
@@ -5,7 +5,7 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
-<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -43,6 +43,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="AttributeRouting" path="routes.axd" verb="*" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
     </handlers>
+    <validation validateIntegratedModeConfiguration="false"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -106,11 +107,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <nlog>
+  <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
       <default-wrapper xsi:type="BufferingWrapper" bufferSize="100"/>
       <target name="logfile" xsi:type="File" fileName="${basedir}/APILog/${date:format=yyy-MM-dd}-api.log}"/>
-      <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source="Api Services" /> 
+      <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source="Api Services" />
     </targets>
     <rules>
       <logger name="*" minlevel="Trace" writeTo="logfile" />
