It's annoying me now.

--- a/BringingItAllTogether/Web.config
+++ b/BringingItAllTogether/Web.config
@@ -1,6 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"  ?>
-
-
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -24,9 +22,17 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AuthTokenExpiry" value="900" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" />
     <httpHandlers>
       <add verb="*" path="routes.axd" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
@@ -37,13 +43,13 @@
       <remove name="FormsAuthentication" />
     </modules>
     <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name="AttributeRouting" path="routes.axd" verb="*" type="AttributeRouting.Web.Logging.LogRoutesHandler, AttributeRouting.Web" />
-    </handlers>
-    <validation validateIntegratedModeConfiguration="false"/>
+      
+      
+      
+      
+    <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -65,7 +71,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -109,8 +115,8 @@
   </entityFramework>
   <nlog xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <targets>
-      <default-wrapper xsi:type="BufferingWrapper" bufferSize="100"/>
-      <target name="logfile" xsi:type="File" fileName="${basedir}/APILog/${date:format=yyy-MM-dd}-api.log}"/>
+      <default-wrapper xsi:type="BufferingWrapper" bufferSize="100" />
+      <target name="logfile" xsi:type="File" fileName="${basedir}/APILog/${date:format=yyy-MM-dd}-api.log}" />
       <target name="eventlog" xsi:type="EventLog" layout="${message}" log="Application" source="Api Services" />
     </targets>
     <rules>
